# ansible-easy

./: .gitignore  README.md  pyproject.toml
.github/workflows/: bump-version-and-publish.yaml  bump-version.yaml  publish.yaml
ansible_easy/: main.py
ansible_easy/scripts/: config_parser.py  env.py  log.py  playbook_runner.py
docs/: README.md  SUMMARY.md
docs/concepts/: how-it-works.md  template-format.md
docs/examples/: postgresql.md
docs/getting-started/: installation.md  quickstart.md
docs/reference/: runtime-and-logging.md  template-reference.md
docs/usage/: cli.md  python.md
examples/postgresql/: README.md
