[project]
name = "ansible-easy"
dynamic = ["version"] 
description = "package to make creating ansible workflows easy"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible>=13.5.0",
    "ansible-lint>=26.3.0",
    "ansible-runner>=2.4.3",
    "colorlog>=6.10.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.13.1",
    "pyyaml>=6.0.3",
]

[project.scripts]
ansible-easy = "ansible_easy.main:cli"

[tool.hatch.version]
path = "ansible_easy/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["ansible_easy"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
